Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.0.0
-
None
-
I observed it under Windows 8 64bit.
Description
See the comments below by Robert Löhning, which explain why the behavior described is not observable on some systems. He also provided a robust reproducing sequence in his comments.
Here is the original description:
This issue is a descendant of this discussion: http://qt-project.org/forums/viewthread/36200
I think I found the reproducing sequence:
1. Make a project with mixed-case source file names.
2. If I click on a file in the "Projects" view, file is open in editor and appears in the list of "Open Documents" with a correct name exactly as it is in file system, which is correct and how it is expected.
3. Make some line broken in a source file, so that you get an error message during the compilation.
4. Close all files in editor.
5. Press "Build Project" button: an error message appears in "Issues" view. That error message already has file name referred as all-lower case name, instead of a real mixed-case file name.
6. Double-click on the error message, file is open in editor, and the list of "Open Documents" lists it with all-lower case letters, which is not correct already, but not a problem yet.
7. Later, after working for a wile, one may find the same file listed twice in "Open Documents", one as it is supposed to be with mixed-case letters and other one with all-lower-case letters.
8. I believe that having internal record for the same file with different case of letters messes up code model (intellisense). I also believe, that manual closing of duplicated files listed in the "Open Documents" restores a correct behavior of code model.
9. Although, I am not sure how to reproduce an incorrect behavior of code model after step 6, I believe that all problems will be gone if file appears with correct case letters in the error message of the step 5 and in "Open Documents" of step 6.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-10994 Regression: Opening second editor for file when creating project using wrong capitalization
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-11199 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
76868,1 | Utils: Fix getting a case sensitive path on windows. | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |