src/libs/utils/utils.pro
@@ -18,6 +18,6 @@ lessThan(QT_MAJOR_VERSION, 5) {
     }
 }
 
-win32: LIBS += -luser32
+win32: LIBS += -luser32 -lshell32
 # PortsGatherer
 win32: LIBS += -liphlpapi -lws2_32
